NAK-1451 - OSD refactoring
