# docs/openapi/openapi.json
@@ -5,14 +5,14 @@
     "version": "0.1.0"
   },
   "paths": {
-    "/dev-ska-ost-osd-nak-1313-osd-fastapi-migration-feature/osd/api/v4/osd": {
+    "/ska-ost-osd/osd/api/v4/osd": {
       "get": {
         "tags": [
           "OSD"
         ],
         "summary": "Get OSD data filter by the query parameter",
         "description": "Retrieves the OSD cycle_id data which match the query\n    parameters. Also requests without parameters will take\n    example and default values and return data based on that.\n    All query parameters has its own validation if user provide\n    any invalid value it will return the error message.",
-        "operationId": "get_osd_dev_ska_ost_osd_nak_1313_osd_fastapi_migration_feature_osd_api_v3_osd_get",
+        "operationId": "get_osd_ska_ost_osd_osd_api_v4_osd_get",
         "parameters": [
           {
             "name": "cycle_id",
@@ -150,7 +150,7 @@
         ],
         "summary": "Update OSD data filter by the query parameter",
         "description": "Update the OSD data which match the query\n    parameters. Also requests without parameters will take example\n    and default values and return data based on that. All query\n    parameters has its own validation if user provide any invalid\n    value it will return the error message.",
-        "operationId": "update_osd_data_dev_ska_ost_osd_nak_1313_osd_fastapi_migration_feature_osd_api_v3_osd_put",
+        "operationId": "update_osd_data_ska_ost_osd_osd_api_v4_osd_put",
         "parameters": [
           {
             "name": "cycle_id",
@@ -219,9 +219,24 @@
                 "capabilities": {
                   "mid": {
                     "AA2": {
-                      "allowed_channel_count_range_max": [214748647],
-                      "allowed_channel_count_range_min": [1],
-                      "allowed_channel_width_values": [210, 420, 840, 1680, 3360, 6720, 13440, 26880, 40320, 53760],
+                      "allowed_channel_count_range_max": [
+                        214748647
+                      ],
+                      "allowed_channel_count_range_min": [
+                        1
+                      ],
+                      "allowed_channel_width_values": [
+                        210,
+                        420,
+                        840,
+                        1680,
+                        3360,
+                        6720,
+                        13440,
+                        26880,
+                        40320,
+                        53760
+                      ],
                       "available_bandwidth_hz": 800000000,
                       "available_receivers": [
                         "Band_1",
@@ -304,14 +319,14 @@
         }
       }
     },
-    "/dev-ska-ost-osd-nak-1313-osd-fastapi-migration-feature/osd/api/v4/osd_release": {
+    "/ska-ost-osd/osd/api/v4/osd_release": {
       "post": {
         "tags": [
           "OSD"
         ],
         "summary": "Release new osd version to Gitlab",
         "description": "Release OSD data with automatic version increment based on cycle ID",
-        "operationId": "release_osd_data_dev_ska_ost_osd_nak_1313_osd_fastapi_migration_feature_osd_api_v3_osd_release_post",
+        "operationId": "release_osd_data_ska_ost_osd_osd_api_v4_osd_release_post",
         "parameters": [
           {
             "name": "cycle_id",
@@ -363,14 +378,14 @@
         }
       }
     },
-    "/dev-ska-ost-osd-nak-1313-osd-fastapi-migration-feature/osd/api/v4/cycle": {
+    "/ska-ost-osd/osd/api/v4/cycle": {
       "get": {
         "tags": [
           "OSD"
         ],
         "summary": "GET list of available proposal cycles",
         "description": "GET list of all available proposal cycles",
-        "operationId": "get_cycle_list_dev_ska_ost_osd_nak_1313_osd_fastapi_migration_feature_osd_api_v3_cycle_get",
+        "operationId": "get_cycle_list_ska_ost_osd_osd_api_v4_cycle_get",
         "responses": {
           "200": {
             "description": "Successful Response",
@@ -385,14 +400,14 @@
         }
       }
     },
-    "/dev-ska-ost-osd-nak-1313-osd-fastapi-migration-feature/osd/api/v4/semantic_validation": {
+    "/ska-ost-osd/osd/api/v4/semantic_validation": {
       "post": {
         "tags": [
           "OSD"
         ],
         "summary": "Validate input json Semantically Semantic validation checks the meaning of the input data and ensures that it is valid in the context of the system. It checks whether the input data conforms to the business rules and logic of the system",
         "description": "Checks if the Command Input JSON is semantically valid",
-        "operationId": "semantically_validate_json_dev_ska_ost_osd_nak_1313_osd_fastapi_migration_feature_osd_api_v3_semantic_validation_post",
+        "operationId": "semantically_validate_json_ska_ost_osd_osd_api_v4_semantic_validation_post",
         "requestBody": {
           "content": {
             "application/json": {
@@ -402,6 +417,7 @@
               "example": {
                 "raise_semantic": true,
                 "sources": "car:ost/ska-ost-osd?{osd_version}#tmdata",
+                "array_assembly": "AA0.5",
                 "interface": "https://schema.skao.int/ska-tmc-assignresources/2.1",
                 "observing_command_input": {
                   "dish": {
@@ -428,10 +444,22 @@
                               "freq_max": 368000000,
                               "freq_min": 350000000,
                               "link_map": [
-                                [0, 0],
-                                [200, 1],
-                                [744, 2],
-                                [944, 3]
+                                [
+                                  0,
+                                  0
+                                ],
+                                [
+                                  200,
+                                  1
+                                ],
+                                [
+                                  744,
+                                  2
+                                ],
+                                [
+                                  944,
+                                  3
+                                ]
                               ],
                               "spectral_window_id": "fsp_1_channels",
                               "start": 0,
@@ -440,16 +468,20 @@
                           ]
                         }
                       ],
-                      "context": {
-
-                      },
+                      "context": {},
                       "eb_id": "eb-test-20220916-00000",
                       "fields": [
                         {
                           "field_id": "field_a",
                           "phase_dir": {
-                            "dec": [80, 0.1],
-                            "ra": [123, 0.1],
+                            "dec": [
+                              80,
+                              0.1
+                            ],
+                            "ra": [
+                              123,
+                              0.1
+                            ],
                             "reference_frame": "ICRF3",
                             "reference_time": "2023-02-16T01:23:45.678900"
                           },
@@ -497,9 +529,7 @@
                     "interface": "https://schema.skao.int/ska-sdp-assignres/0.4",
                     "processing_blocks": [
                       {
-                        "parameters": {
-
-                        },
+                        "parameters": {},
                         "pb_id": "pb-mvp01-20200325-00001",
                         "script": {
                           "kind": "realtime",
@@ -508,9 +538,7 @@
                         }
                       },
                       {
-                        "parameters": {
-
-                        },
+                        "parameters": {},
                         "pb_id": "pb-mvp01-20200325-00002",
                         "script": {
                           "kind": "realtime",
@@ -527,9 +555,7 @@
                             "pb_id": "pb-mvp01-20200325-00001"
                           }
                         ],
-                        "parameters": {
-
-                        },
+                        "parameters": {},
                         "pb_id": "pb-mvp01-20200325-00003",
                         "sbi_ids": [
                           "sbi-mvp01-20200325-00001"
@@ -549,9 +575,7 @@
                             "pb_id": "pb-mvp01-20200325-00003"
                           }
                         ],
-                        "parameters": {
-
-                        },
+                        "parameters": {},
                         "pb_id": "pb-mvp01-20200325-00004",
                         "script": {
                           "kind": "batch",
@@ -561,7 +585,12 @@
                       }
                     ],
                     "resources": {
-                      "csp_links": [1, 2, 3, 4],
+                      "csp_links": [
+                        1,
+                        2,
+                        3,
+                        4
+                      ],
                       "receptors": [
                         "SKA001",
                         "SKA100"
@@ -574,9 +603,15 @@
                   "capabilities": {
                     "mid": {
                       "AA0.5": {
-                        "allowed_channel_count_range_max": [58982],
-                        "allowed_channel_count_range_min": [1],
-                        "allowed_channel_width_values": [13440],
+                        "allowed_channel_count_range_max": [
+                          58982
+                        ],
+                        "allowed_channel_count_range_min": [
+                          1
+                        ],
+                        "allowed_channel_width_values": [
+                          13440
+                        ],
                         "available_bandwidth_hz": 800000000,
                         "available_receivers": [
                           "Band_1",
@@ -694,9 +729,7 @@
           "result_data": {
             "anyOf": [
               {
-                "items": {
-
-                },
+                "items": {},
                 "type": "array"
               },
               {
@@ -723,7 +756,8 @@
           "result_data",
           "result_status"
         ],
-        "title": "ApiResponse"
+        "title": "ApiResponse",
+        "description": "Standardized API response model extending BaseResponseModel.\n\nThis model adds the HTTP status code to the base response fields.\n\n:param result_code: HTTPStatus, the HTTP status code for the response.\n    Defaults to ``HTTPStatus.OK``."
       },
       "ApiResponse_CycleModel_": {
         "properties": {
@@ -815,11 +849,75 @@
         "required": [
           "cycles"
         ],
-        "title": "CycleModel"
+        "title": "CycleModel",
+        "description": "Pydantic model representing a list of cycle IDs.\n\n:param cycles: A list of integer cycle IDs."
       },
       "HTTPStatus": {
         "type": "integer",
-        "enum": [100, 101, 102, 103, 200, 201, 202, 203, 204, 205, 206, 207, 208, 226, 300, 301, 302, 303, 304, 305, 307, 308, 400, 401, 402, 403, 404, 405, 406, 407, 408, 409, 410, 411, 412, 413, 414, 415, 416, 417, 418, 421, 422, 423, 424, 425, 426, 428, 429, 431, 451, 500, 501, 502, 503, 504, 505, 506, 507, 508, 510, 511],
+        "enum": [
+          100,
+          101,
+          102,
+          103,
+          200,
+          201,
+          202,
+          203,
+          204,
+          205,
+          206,
+          207,
+          208,
+          226,
+          300,
+          301,
+          302,
+          303,
+          304,
+          305,
+          307,
+          308,
+          400,
+          401,
+          402,
+          403,
+          404,
+          405,
+          406,
+          407,
+          408,
+          409,
+          410,
+          411,
+          412,
+          413,
+          414,
+          415,
+          416,
+          417,
+          418,
+          421,
+          422,
+          423,
+          424,
+          425,
+          426,
+          428,
+          429,
+          431,
+          451,
+          500,
+          501,
+          502,
+          503,
+          504,
+          505,
+          506,
+          507,
+          508,
+          510,
+          511
+        ],
         "title": "HTTPStatus",
         "description": "HTTP status codes and reason phrases\n\nStatus codes from the following RFCs are all observed:\n\n    * RFC 7231: Hypertext Transfer Protocol (HTTP/1.1), obsoletes 2616\n    * RFC 6585: Additional HTTP Status Codes\n    * RFC 3229: Delta encoding in HTTP\n    * RFC 4918: HTTP Extensions for WebDAV, obsoletes 2518\n    * RFC 5842: Binding Extensions to WebDAV\n    * RFC 7238: Permanent Redirect\n    * RFC 2295: Transparent Content Negotiation in HTTP\n    * RFC 2774: An HTTP Extension Framework\n    * RFC 7725: An HTTP Status Code to Report Legal Obstacles\n    * RFC 7540: Hypertext Transfer Protocol Version 2 (HTTP/2)\n    * RFC 2324: Hyper Text Coffee Pot Control Protocol (HTCPCP/1.0)\n    * RFC 8297: An HTTP Status Code for Indicating Hints\n    * RFC 8470: Using Early Data in HTTP"
       },
@@ -857,7 +955,8 @@
           "version",
           "cycle_id"
         ],
-        "title": "OSDRelease"
+        "title": "OSDRelease",
+        "description": "Represents an OSD (Observation Scheduling Data) release metadata object.\n\nThis model stores key details about a specific OSD release,\nincluding a human-readable release message, the release version,\nand the associated cycle ID.\n\n:param message: str, description or notes about the release.\n:param version: str, release version string (e.g., ``\"1.2.0\"``).\n:param cycle_id: str, identifier for the cycle associated with this release.\n\n**Example:**\n\n.. code-block:: python\n\n    release = OSDRelease(\n        message=\"Updated observation constraints for mid telescope\",\n        version=\"4.1.0\",\n        cycle_id=\"4\"\n    )"
       },
       "ReleaseType": {
         "type": "string",
@@ -865,7 +964,8 @@
           "minor",
           "major"
         ],
-        "title": "ReleaseType"
+        "title": "ReleaseType",
+        "description": "Enumeration of possible release types for OSD.\n\nThis enum is used to distinguish between major and minor releases.\nIt inherits from ``str`` to allow string comparisons and serialization.\n\n:cvar minor: Represents a minor release.\n:cvar major: Represents a major release."
       },
       "SemanticValidationModel": {
         "properties": {
@@ -879,6 +979,20 @@
               }
             ],
             "title": "Interface"
+          },
+          "array_assembly": {
+            "anyOf": [
+              {
+                "type": "string",
+                "pattern": "^AA(\\d+|\\d+\\.\\d+)"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Array Assembly",
+            "description": "Array assembly in format AA[0-9] or AA[0-9].[0-9]",
+            "default": "AA0.5"
           },
           "observing_command_input": {
             "additionalProperties": true,
@@ -910,15 +1024,9 @@
             "default": true
           },
           "sources": {
-            "anyOf": [
-              {
-                "type": "string"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Sources"
+            "type": "string",
+            "title": "Sources",
+            "default": "car:ost/ska-ost-osd?main#tmdata"
           }
         },
         "type": "object",
@@ -926,7 +1034,7 @@
           "observing_command_input"
         ],
         "title": "SemanticValidationModel",
-        "description": "SemanticValidationModel defines the schema for validating semantic input\ndata related to observing commands and system configuration.\n\n:param interface (Optional[str]): An optional string representing\nthe command interface type.\n\n:param observing_command_input (Dict[str, Any]): A required\ndictionary containing the core input parameters for an observing\ncommand.\n\n:param osd_data (Optional[Dict[str, Any]]): Optional data fetched\nfrom the OSD.\n\n:param raise_semantic (Optional[bool]): Flag to indicate whether\nsemantic validation errors should be raised. Defaults to True.\n\n:param sources (Optional[str]): An optional string that may\nreference data sources, including dynamic placeholders such as\n'{osd_version}'."
+        "description": "Defines the schema for validating semantic input data related to\nobserving commands and system configuration.\n\n:param interface (Optional[str]): An optional string representing\nthe command interface type.\n\n:param observing_command_input (Dict[str, Any]): A required\ndictionary containing the core input parameters for an observing\ncommand.\n\n:param osd_data (Optional[Dict[str, Any]]): Optional data fetched\nfrom the OSD.\n\n:param raise_semantic (Optional[bool]): Flag to indicate whether\nsemantic validation errors should be raised. Defaults to True.\n\n:param sources (str): A string specifying a TelModel data source."
       },
       "ValidationError": {
         "properties": {
